# RPHAST

./: ChangeLog  DESCRIPTION  LICENSE  NAMESPACE  README.md  cleanup  configure  configure.ac  configure.win
R/: bgc.R  checkArgs.R  feat.R  gff.R  hmm.R  listOfLists.R  msa.R  phastCons.R  phyloFit.R  phyloP.R  plot.R  rphast.R  tfbs.R  treeModel.R  trees.R  zzz.R
inst/doc/: Sweave.sty  rphast.Rnw  rphast.bib  vignette1.Rnw  vignette2.Rnw  vignette3.Rnw  vignette4.Rnw
inst/examples/: as-track-feat.R  col-expected-subs-msa.R  expected-subs-msa.R  fix-start-stop-feat.R  get4d-msa.R  guess-format-msa.R  likelihood-msa.R  mod-backgd-tm.R  phastCons.R  phyloFit.R  phyloP.R  plot-altmodel-tm.R  plot-feat.R  plot-gene.R  plot-lsmodel-tm.R  plot-msa.R  plot-tm.R  postprob-msa.R  read-feat.R  read-msa.R  score-hmm.R  split-by-feature-msa.R  total-expected-subs-msa.R  translate-msa.R
man/: add.UTRs.feat.Rd  add.introns.feat.Rd  add.ls.mod.Rd  add.signals.feat.Rd  alphabet.msa.Rd  apply.bgc.sel.Rd  as.data.frame.feat.Rd  as.list.tm.Rd  as.pointer.feat.Rd  as.pointer.msa.Rd  as.track.feat.Rd  as.track.msa.Rd  as.track.wig.Rd  base.freq.msa.Rd  bgc.informative.Rd  bgc.nucleotide.tests.Rd  bgc.sel.factor.Rd  branchlength.tree.Rd  classify.muts.bgc.Rd  codon.clean.msa.Rd  col.expected.subs.msa.Rd  complement.Rd  composition.feat.Rd  concat.msa.Rd  convert.coords.feat.Rd  coord.range.msa.Rd  copy.feat.Rd  copy.msa.Rd  coverage.feat.Rd  density.feat.Rd  depth.tree.Rd  dim.feat.Rd  dim.msa.Rd  enrichment.feat.Rd  expected.subs.msa.Rd  extract.feature.msa.Rd  feat.Rd  fix.semicolon.tree.Rd  fix.start.stop.feat.Rd  flatten.feat.Rd  (+107 more)
src/: Makevars.in  Makevars.win  bgc_hmm.c  eigen.c  external_libs.h  fit_em.c  hmm.c  indel_history.c  markov_matrix.c  msa.c  numerical_opt.c  phylo_p.c  rph_category_map.c  rph_hmm.c  rph_init.c  rph_list_of_lists.c  rph_msa.c  rph_phyloFit.c  rph_phylo_hmm.c  rph_subst_mods.c  rph_tfbs.c  rph_tree_model.c  rph_util.h  tfbs.c
tests/: .Rhistory  feat.examples.R  gff.examples.R  hmm.examples.R  msa.examples.R  phastCons.examples.R  phyloFit.examples.R  phyloP.examples.R  plot.examples.R  treeModel.examples.R  trees.examples.R  zzz.examples.R
vignettes/: vignette1.Rnw  vignette2.Rnw  vignette3.Rnw  vignette4.Rnw
